# FolderOrganizer

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  plan.md
.github/workflows/: release.yml
public/: notification.html
src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: commands.rs  condition.rs  config.rs  context_menu.rs  db.rs  lib.rs  main.rs  rules.rs  scheduler.rs  watcher.rs
src-tauri/src/commands/: conditions.rs  config_cmds.rs  data.rs  db_viewer.rs  folders.rs  mod.rs  rules.rs  watcher_cmds.rs
src-tauri/src/db/: activity.rs  file_index.rs  metadata.rs  mod.rs  models.rs  scheduled_deletions.rs  storage.rs  undo.rs
src/components/: ContextMenuPrompt.tsx  Layout.tsx  Sidebar.tsx  UpdateChecker.tsx
src/i18n/: en.json  fr.json  index.ts  zh.json
src/pages/: Activity.tsx  Dashboard.tsx  DataExplorer.tsx  Folders.tsx  Rules.tsx  Settings.tsx
src/pages/rules/: ActionDisplay.tsx  ImportRulesModal.tsx  RuleEditor.tsx  RuleListItem.tsx  helpers.ts  index.tsx
src/utils/: format.ts
~/.tauri/: FolderOrganizer.key  FolderOrganizer.key.pub
