[package]
name = "folder-organizer"
version = "1.5.5"
description = "Lightweight desktop app to auto-organize your folders"
authors = ["Liang Chu"]
license = "MIT"
edition = "2021"

[lib]
name = "folder_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
notify-debouncer-mini = "0.6"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
regex = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.10.0"
trash = "5.2.5"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-notification = "2.3.3"

